feat(reports): reports features has completed
